--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,32 @@
-Student record
+<!-- Toolbar -->
+<mat-toolbar color="primary" class="header">
+  <div>Student Records</div>
+  <span class="nav-tool-items">
+    <mat-icon (click)="sidenav.toggle()" class="hamburger">menu</mat-icon>
+  </span>
+</mat-toolbar>
 
-<menu></menu>
+<mat-sidenav-container>
+  <!-- Sidenav -->
+  <mat-sidenav
+    #sidenav
+    [mode]="isBiggerScreen() ? 'over' : 'side'"
+    [(opened)]="opened"
+    [fixedInViewport]="true"
+    [fixedTopGap]
+  >
+    <mat-nav-list>
+      <a mat-list-item routerLinkActive="active" routerLink="/add-student">
+        <mat-icon>add</mat-icon> Add Student
+      </a>
+      <a mat-list-item routerLinkActive="active" routerLink="/students-list">
+        <mat-icon>format_list_bulleted</mat-icon> View Students
+      </a>
+    </mat-nav-list>
+  </mat-sidenav>
 
-<mat-sidenav
-  #sidenav
-  [mode]="isBiggerScreen() ? 'over' : 'side'"
-  [(opened)="opened"
-  [fixedInViewport]="true"
-  [fixedTopGap]]
-></mat-sidenav>
-
-<add-student></add-student>
-
-format_list_bulleted View Students
+  <!-- Main content -->
+  <mat-sidenav-content>
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
+</mat-sidenav-container>
